Compiler/src/main/java/Testing/Tests/SemanticTests/failing/DuplicateMethod.ru
struct A{}
impl A{
.(){}
fn hola(Int a) -> void{}
fn hola(Char b) -> Bool{}}
start{}